# pyrs

./: requirements.txt
pyrs/: pyrs.py
pyrs/tests/: test_pyrs.py
rsws/: Cargo.toml  rust-toolchain
rsws/.cargo/: Config
rsws/.toolchain/: cmd
rsws/add-one/: Cargo.toml
rsws/adder/: Cargo.toml
rsws/cargo/: cmd
rsws/pyadder/: Cargo.toml
rsws/pyadder/src/: lib.rs
rsws/pydicts/: Cargo.toml
rsws/pydicts/src/: from.rs  into.rs  lib.rs
rsws/pydicts/tests/: fromobject.rs  intoobject.rs
