[package]
name = "pyadder"
version = "0.1.0"
authors = ["wrmsr <timwilloney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyadder"
crate-type = ["cdylib"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[dependencies]
add-one = { path = "../add-one" }

pyo3 = "0.9.1"
