[package]
name = "pyadder"
version = "0.1.0"
authors = ["wrmsr <timwilloney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyadder"
crate-type = ["cdylib"]

[dependencies]
add-one = { path = "../add-one" }
pydicts = { path = "../pydicts" }

[dependencies.pyo3]
version = "0.9.1"
features = ["extension-module"]