[package]
name = "pydicts"
version = "0.1.0"
authors = ["wrmsr <timwilloney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1.0.10"

[dev-dependencies]
pyo3 = "0.9.1"